<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="60dp">

    <TextView
        android:id="@+id/textViewholderseek"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/none"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/textViewholderseek" />

    <TextView
        android:id="@+id/textViewholderseek2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/textViewholderseek"
        app:layout_constraintEnd_toStartOf="@+id/textViewholderseek3"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toEndOf="@+id/textViewholderseek"
        app:layout_constraintTop_toTopOf="@+id/textViewholderseek"
        app:layout_constraintVertical_bias="0.523"
        tools:text="@string/textViewholderseek3" />

    <TextView
        android:id="@+id/textViewholderseek3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:text="@string/none"
        app:layout_constraintBottom_toBottomOf="@+id/textViewholderseek2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewholderseek2"
        app:layout_constraintVertical_bias="0.0"
        tools:text="@string/textViewholderseek3" />
</androidx.constraintlayout.widget.ConstraintLayout>